--- a/Comunity Site/public/css/login.css
+++ b/Comunity Site/public/css/login.css
@@ -58,3 +58,12 @@ img {
     margin-top: 150px;
     margin-left: 40px;
 }
+
+.container-login {
+    margin-top: 100px;
+    margin-left: 200px;
+}
+
+.form-group {
+    width: 300px
+}
