--- a/Comunity Site/public/css/information.css
+++ b/Comunity Site/public/css/information.css
@@ -11,10 +11,6 @@ a {
     text-decoration: none!important;
 }
 
-img {
-    width: 25px!important;
-}
-
 .box1 {
     position: fixed;
     background: #717bff;
@@ -41,7 +37,6 @@ img {
     margin-bottom: 20px;
 }
 
-
 .side-content {
     width: 100%;
     height: 500px;
@@ -54,13 +49,11 @@ img {
     font-size: 25px;
 }
 
-
 .side-content img {
     width: 35px;
     margin-right: 5px;
     margin-top: 30px;
 }
-
 
 .box2 {
     position: fixed;
@@ -89,4 +82,14 @@ img {
 .side2-menu a {
     margin-top: 20px;
     color: #000;
+}
+
+.front {
+    width: 100%;
+    height: 500px;
+}
+
+.profile {
+    margin-top: 50px;
+    height: 500px;
 }
