--- a/Community Site/public/css/community.css
+++ b/Community Site/public/css/community.css
@@ -41,6 +41,7 @@ img {
     margin-bottom: 20px;
 }
 
+
 .side-content {
     width: 100%;
     height: 500px;
@@ -53,11 +54,13 @@ img {
     font-size: 25px;
 }
 
+
 .side-content img {
     width: 35px;
     margin-right: 5px;
     margin-top: 30px;
 }
+
 
 .box2 {
     position: fixed;
@@ -88,42 +91,17 @@ img {
     color: #000;
 }
 
-.container {
-    position: relative;
-    width: 100%;
-    height: 50rem;
+.All-post p {
+    margin-top: 30px;
 }
 
-#front {
-    margin-left: 250px;
-    margin-top: 150px;
-    width: 100%;
-    height: 200px;
+.post {
+    margin-top: 30px;
+    text-align: center;
+    border: 1px solid #000;
 }
 
-.profile-img img {
-    width: 120px!important;
-}
-
-.profile-content {
-    font-size: 20px;
-    margin-top: -120px;
-    margin-left: 150px;
-}
-
-#back { 
-    margin-left: 250px;
-    margin-top: 200px;
-    width: 100%;
-    height: 200px;
-}
-
-.profile2-img img {
-    width: 160px!important;
-}
-
-.profile2-content {
-    font-size: 20px;
-    margin-top: -160px;
-    margin-left: 180px;
+.post p:nth-child(3) {
+    margin-top: -40px;
+    font-size: 12px
 }
