--- a/Community Site/public/css/java.css
+++ b/Community Site/public/css/java.css
@@ -88,42 +88,17 @@ img {
     color: #000;
 }
 
-.container {
-    position: relative;
-    width: 100%;
-    height: 50rem;
+.java-post p {
+    margin-top: 30px;
 }
 
-#front {
-    margin-left: 250px;
-    margin-top: 150px;
-    width: 100%;
-    height: 200px;
+.post {
+    margin-top: 30px;
+    text-align: center;
+    border: 1px solid #000;
 }
 
-.profile-img img {
-    width: 120px!important;
-}
-
-.profile-content {
-    font-size: 20px;
-    margin-top: -120px;
-    margin-left: 150px;
-}
-
-#back { 
-    margin-left: 250px;
-    margin-top: 200px;
-    width: 100%;
-    height: 200px;
-}
-
-.profile2-img img {
-    width: 160px!important;
-}
-
-.profile2-content {
-    font-size: 20px;
-    margin-top: -160px;
-    margin-left: 180px;
+.post p:nth-child(3) {
+    margin-top: -40px;
+    font-size: 12px;
 }
